--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -16,6 +16,11 @@
             <p th:errors = "*{email}" class="text-danger" th:if="${#fields.hasErrors('email')}"></p>
         </div>
         <div class="user-box">
+            <input type="text" name="nickname" id="nickname" th:field="*{nickname}" required pattern="^[a-zA-Z0-9]{5,20}$" title="Podaj od 5 do 20 znaków tylko litery i cyfry">
+            <label>Nickname</label>
+            <p th:errors = "*{nickname}" class="text-danger" th:if="${#fields.hasErrors('nickname')}"></p>
+        </div>
+        <div class="user-box">
             <input type="password" name="password" id="password" th:field="*{password}" required >
             <label>Password</label>
             <p th:errors = "*{password}" class="text-danger" th:if="${#fields.hasErrors('password')}"></p>
