--- a/src/main/resources/templates/addThread.html
+++ b/src/main/resources/templates/addThread.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <form th:action="@{/post/thread}" method="post">
-    <input type="text" name="topic" placeholder="Topic">
-    <textarea name="textMessage" id="message" cols="80" rows="10" placeholder="Your message"></textarea>
+    <input type="text" name="topic" placeholder="Topic"><br>
+    <textarea name="textMessage" id="message" cols="80" rows="10" placeholder="Your message"></textarea><br>
     <input type="text" name="tags" placeholder="Insert tags separated with comma">
     <input type="submit" value="submit">
 </form>
