--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
             Niepoprawny email lub hasło. Spróbuj ponownie.
         </div>
         <div class="user-login">
-            <a th:href="@{/register}">Create new account</a></p>
+            <a th:href="@{/register}">Create new account</a>
         </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
     </form>
