--- a/src/main/resources/templates/threadPage.html
+++ b/src/main/resources/templates/threadPage.html
@@ -5,7 +5,7 @@
     <title>Thread Page</title>
     <style>
         .post {
-            border: 1px solid #000;
+            border: 1px solid black;
             margin: 10px;
             padding: 10px;
             border-radius: 5px;
